# Hotel-Management-System

./: db.sqlite3  pyproject.toml
core_hotel/: apps.py  urls.py
hms_prj/: settings.py  urls.py
hotel/: urls.py
userauths/: admin.py  models.py
userauths/migrations/: 0001_initial.py
