[project]
name = "hms_prj"
version = "0.1.0"
description = ""
authors = [
    {name = "EvansRobbie",email = "evansrobbie5311@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.5,<6.0.0)",
    "django-crispy-forms (>=2.3,<3.0)",
    "django-import-export (>=4.3.4,<5.0.0)",
    "shortuuid (>=1.0.13,<2.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "django-taggit (>=6.1.0,<7.0.0)",
    "django-jazzmin (>=3.0.1,<4.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
